force-app/main/default/objects/Teacher_2__c/Teacher_2__c.object-meta.xml
<CustomObject>
    <label>Teacher 2</label>
    <nameField>
        <label>Teacher 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>