force-app/main/default/objects/Teacher_2__c/fields/IsMentor__c.field-meta.xml
<CustomField>
    <fullName>IsMentor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsMentor?</label>
    <type>Checkbox</type>
</CustomField>