force-app/main/default/objects/Teacher_2__c/fields/Salary_With_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Salary_With_Bonus__c</fullName>
    <formula>IF( ISPICKVAL( Gender__c ,&apos;Mr.&apos;) ||   BEGINS( Name , &apos;A&apos;),  Salary__c*1.1, ( IF((YEAR(TODAY()) - YEAR(Date_Of_Birth__c ))&lt;30,  Salary__c*1.2,  Salary__c*1.3)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary With Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>