force-app/main/default/objects/Teacher_2__c/validationRules/Salary_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Cap</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c &lt;3000 ||  Salary__c &gt;10000</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Teacher Salary Must Be &quot;3000-10000&quot;</errorMessage>
</ValidationRule>